blockcontrol (1.3-1~pre2) sid lenny; urgency=low

  * New name: moblock-control is now blockcontrol. Generally names either relate
    to this software, then blockcontrol is used; or to the IPBlocker
    (blockdaemon), such as MoBlock or NFBlock. Then $NAME (moblock or nfblock)
    is used. Changed:
    - directory names
    - filenames
    - variable names:
      - MOBLOCK_INIT > INIT
      - MOBLOCK_CRON > CRON

  TODO:
  - NEWS
  - transition script for custom iptables rules
  - debian/postinst transition, extra package?
  - formatting
  - documentation
  - add previously moblock-control hints in copyright, etc.
  - check if the recent changes by cader are still present. E.g. the Email
    part in init seems to got lost.
  - Check how NFBlock works with marking on/off.
  - Check howto implement all options of NFBlock.
  - Note in blockcontrol.conf for all variables that only work for one daemon.


  * TODO: add support for moblock -z NFQUEUE length from patch 41_Patch_2589_All
    ow__nfq_set_queue_maxlen__to_be_increased_from_default.dpatch

  * Upstream NFBlock is now NFBlock, changed dependencies and all files.
  * Removed last traces of quickstart (MOBLOCK_INIT="2=") which was only present
    in an development version.
  * Added exit if iptables is not found.
  * Check for ipv6 module before running ip6tables (cader)
  * Email the results of the update rather than let cron email the output (cader)
    This makes for a nicer email message.

 -- jre <jre-phoenix@users.sourceforge.net>  Wed, 14 Jan 2009 20:35:31 +0100

moblock-control (1.2-1) sid lenny; urgency=low

  * moblock-control, moblock.if-up, cron.daily, init, debian/postinst:
    - moved most code as functions to moblock-control.lib and
      moblock-control.defaults.lib and source these files instead.
    - Use the same initialization code in these files. If moblock.conf
      and moblock-control.defaults.lib are not installed at the default places,