@@ -9,9 +9,61 @@
 # (/etc/default/blockcontrol) if they are set there.
 # THE DEBIAN (AND UBUNTU) PACKAGE CONFIGURATION SYSTEM DEBCONF AND THE
 # GRAPHICAL INTERFACE MOBLOQUER STORE THE CONFIGURATION IN THAT FILE.
-# It is strongly recommended that you make your changes only in that file.
+# It is strongly recommended that you make your changes in that file only.
 
-############################ General configuration ############################
+################################ Paths and names ###############################
+
+PATH="/sbin:/bin:/usr/sbin:/usr/bin"
+
+CONTROL_NAME="blockcontrol"
+
+# The path of the blockcontrol script
+CONTROL_SCRIPT="/usr/bin/$CONTROL_NAME"
+
+# The path to the blockcontrol library
+CONTROL_LIB="/usr/lib/$CONTROL_NAME/$CONTROL_NAME.lib"
+
+# The path of the configuration files' directory. Because others variables
+# depend on this you have to set this here, not in default.
+CONF_DIR="/etc/$CONTROL_NAME"
+
+# The path of default
+CONTROL_DEFAULT="/etc/default/$CONTROL_NAME"
+
+# The path of the master blocklist directory
+MASTER_BLOCKLIST_DIR="/var/lib/$CONTROL_NAME"
+
+# The path of the directory where the blocklists are downloaded and manipulated
+BLOCKLISTS_DIR="/var/spool/$CONTROL_NAME"
+
+# The path of blocklists.list
+BLOCKLISTS_LIST="$CONF_DIR/blocklists.list"
+
+# The path to the allow lists
+# Note that per default the same allow list is used for all (in, out and
+# forwarded) connections.
+# The path to the allow list for incoming connections
+ALLOW_IN="$CONF_DIR/allow.p2p"
+# The path to the allow list for outgoing connections
+ALLOW_OUT="$CONF_DIR/allow.p2p"
+# The path to the allow list for forwarded connections. Disabled per default.
+# Don't add your own IP / LAN there or MoBlock will not work at all for FORWARD.
+ALLOW_FW=""
+
+# The path of iptables-custom-insert.sh
+IPTABLES_CUSTOM_INSERT="$CONF_DIR/iptables-custom-insert.sh"
+
+# The path of iptables-custom-remove.sh
+IPTABLES_CUSTOM_DELETE="$CONF_DIR/iptables-custom-remove.sh"
+
+# The path of moblock's pid file
+PIDFILE="/var/run/$NAME.pid"
+
+# The path of the file with the md5sum of all blocklist configurations
+MD5SUM_FILE="$BLOCKLISTS_DIR/MD5SUM"
+
+# The path of the lsb init functions
+LSB="/lib/lsb/init-functions"
 
 # The name of the IP block daemon (moblock or nfblock), the path to it and its
 # description. This is set automatically, so you should not need to set them.
@@ -21,6 +73,8 @@
 #NAME="moblock"
 #DAEMON="/usr/bin/$NAME"
 #DESC="MoBlock"
+
+############################ General configuration ############################
 
 # Set the format of the blocklists that you use. All your blocklists have to be
 # in this format.
@@ -46,6 +100,11 @@ INIT="1"
 # 0 - Don't update the blocklists automatically
 # 1 - Update the blocklists automatically (default)
 CRON="1"
+
+# Who you want the results of the cron.daily updates
+# Unset to not get the results
+# Default is root
+CRON_MAILTO="root"
 
 # You may specify additional options for wget for the blocklist download here.
 # Note: In this variable the download application (wget) must be contained! Some
@@ -223,7 +282,7 @@ IP_REMOVE=""
 # The path of the logfiles' directory and the logfiles
 LOG_DIR="/var/log"
 DAEMON_LOG="$LOG_DIR/$NAME.log"
-CONTROL_LOG="$LOG_DIR/$NAME-control.log"
+CONTROL_LOG="$LOG_DIR/blockcontrol.log"
 # MoBlock's stat file
 STATFILE="/var/log/MoBlock.stats"
 
@@ -260,56 +319,6 @@ VERBOSITY="1"
 
 ############################## General settings ###############################
 
-PATH="/sbin:/bin:/usr/sbin:/usr/bin"
-
-# The path of the blockcontrol script
-CONTROL_SCRIPT="/usr/bin/$NAME-control"
-
-# The path to the blockcontrol library
-SCRIPT_LIB="/usr/lib/blockcontrol.lib"
-
-# The path of the configuration files' directory. Because others variables
-# depend on this you have to set this here, not in default.
-CONF_DIR="/etc/$NAME"
-
-# The path of default
-CONTROL_DEFAULT="/etc/default/$NAME"
-
-# The path of the master blocklist directory
-MASTER_BLOCKLIST_DIR="/var/lib/$NAME"
-
-# The path of the directory where the blocklists are downloaded to
-BLOCKLISTS_DIR="/var/spool/$NAME"
-
-# The path of blocklists.list
-BLOCKLISTS_LIST="$CONF_DIR/blocklists.list"
-
-# The path to the allow lists
-# Note that per default the same allow list is used for all (in, out and
-# forwarded) connections.
-# The path to the allow list for incoming connections
-ALLOW_IN="$CONF_DIR/allow.p2p"
-# The path to the allow list for outgoing connections
-ALLOW_OUT="$CONF_DIR/allow.p2p"
-# The path to the allow list for forwarded connections. Disabled per default.
-# Don't add your own IP / LAN there or MoBlock will not work at all for FORWARD.
-ALLOW_FW=""
-
-# The path of iptables-custom-insert.sh
-IPTABLES_CUSTOM_INSERT="$CONF_DIR/iptables-custom-insert.sh"
-
-# The path of iptables-custom-remove.sh
-IPTABLES_CUSTOM_DELETE="$CONF_DIR/iptables-custom-remove.sh"
-
-# The path of moblock's pid file
-PIDFILE="/var/run/$NAME.pid"
-
-# The path of the file with the md5sum of all blocklist configurations
-MD5SUM_FILE="$BLOCKLISTS_DIR/MD5SUM"
-
-# The path of the lsb init functions
-LSB="/lib/lsb/init-functions"
-
 # Before updating the blocklists check if this host is reachable
 TESTHOST="iblocklist.com"
 
@@ -324,8 +333,3 @@ TESTHOST="iblocklist.com"
 #     specification of the pidfile. Use this for Fedora Core 9 (and other redhat
 #     variants).
 LSB_MODE="1"
-
-# Who you want the results of the cron.daily updates
-# Unset to not get the results
-# Default is root
-CRON_EMAILTO="root"
