@@ -4,11 +4,11 @@
 
 # This script will be executed on every "blockcontrol stop" if
 # IPTABLES_SETTINGS="2" is set in blockcontrol.conf
-# (/etc/blockcontrol.conf) or default
+# (/etc/blockcontrol/blockcontrol.conf) or default
 # (/etc/default/blockcontrol).
 # This script will be executed on every "blockcontrol stop" for 2 settings:
 # If IPTABLES_SETTINGS="1" is set in blockcontrol.conf
-# (/etc/blockcontrol.conf) or default
+# (/etc/blockcontrol/blockcontrol.conf) or default
 # (/etc/default/blockcontrol) then first blockcontrol will remove
 # its iptables setup and afterwards this script gets executed. Note that you
 # don't need to remove custom iptables rules inserted to the chains blockcontrol_in,
