@@ -4,11 +4,17 @@ blockcontrol (1.3-1~pre2) sid lenny; urgency=low
     to this software, then blockcontrol is used; or to the IPBlocker
     (blockdaemon), such as MoBlock or NFBlock. Then $NAME (moblock or nfblock)
     is used. Changed:
-    - directory names
+    - directory names: moblock > blockcontrol
     - filenames
     - variable names:
       - MOBLOCK_INIT > INIT
       - MOBLOCK_CRON > CRON
+      - SCRIPT_LIB > CONTROL_LIB
+      - SCRIPT_DEFAULTS > CONTROL_DEFAULTS
+      - CRON_EMAILTO > CRON_MAILTO
+
+
+
 
   TODO:
   - NEWS
@@ -22,6 +28,9 @@ blockcontrol (1.3-1~pre2) sid lenny; urgency=low
   - Check how NFBlock works with marking on/off.
   - Check howto implement all options of NFBlock.
   - Note in blockcontrol.conf for all variables that only work for one daemon.
+  - test and fix update from moblock-control
+
+  SVN-DONE:
 
 
   * TODO: add support for moblock -z NFQUEUE length from patch 41_Patch_2589_All
